--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,59 @@
 name: epigame
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
+  - ca-certificates=2020.10.14=0
+  - cycler=0.10.0=py37_0
+  - freetype=2.10.4=hd328e21_0
+  - icu=58.2=vc14hc45fdbb_0
+  - intel-openmp=2022.0.0=h57928b3_3663
+  - joblib=0.17.0=py_0
+  - jpeg=9b=vc14h4d7706e_1
+  - kiwisolver=1.2.0=py37h74a9793_0
+  - libblas=3.9.0=12_win64_mkl
+  - libcblas=3.9.0=12_win64_mkl
+  - liblapack=3.9.0=12_win64_mkl
+  - libpng=1.6.37=h2a8f88b_0
+  - libtiff=4.1.0=h56a325e_1
+  - lz4-c=1.9.2=hf4a77e7_3
+  - m2w64-gcc-libgfortran=5.3.0=6
+  - m2w64-gcc-libs=5.3.0=7
+  - m2w64-gcc-libs-core=5.3.0=7
+  - m2w64-gmp=6.1.0=2
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+  - matplotlib=3.3.1=0
+  - matplotlib-base=3.3.1=py37hba9282a_0
+  - mkl=2021.4.0=h0e2418a_729
+  - msys2-conda-epoch=20160418=1
+  - numpy=1.21.5=py37h5fa1a60_0
+  - olefile=0.46=py37_0
+  - openssl=1.1.1h=he774522_0
+  - pillow=8.0.0=py37hca74424_0
   - pip=21.3.1=pyhd8ed1ab_0
+  - pyedflib=0.1.23=py37hec80d1f_0
+  - pyparsing=2.4.7=py_0
+  - pyqt=5.9.2=py37ha878b3d_0
   - python=3.7.1=h9460c21_1003
+  - python-dateutil=2.8.1=py_0
   - python_abi=3.7=2_cp37m
+  - qt=5.9.7=vc14h73c81de_0
+  - scikit-learn=0.23.2=py37h47e9c7a_0
+  - scipy=1.7.3=py37hb6553fb_0
   - setuptools=60.5.0=py37h03978a9_0
+  - sip=4.19.24=py37ha925a31_0
+  - six=1.15.0=py_0
+  - sqlite=3.33.0=h2a8f88b_0
+  - tbb=2021.5.0=h2d74725_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
+  - tk=8.6.10=he774522_0
+  - tornado=6.0.4=py37he774522_1
   - ucrt=10.0.20348.0=h57928b3_0
   - vc=14.2=hb210afc_5
   - vs2015_runtime=14.29.30037=h902a5da_5
   - wheel=0.37.1=pyhd8ed1ab_0
+  - xz=5.2.5=h62dcd97_0
+  - zlib=1.2.11=vc14h1cdd9ab_1
+  - zstd=1.4.4=ha9fde0e_3
 prefix: C:\Users\karla\Miniconda3\envs\epigame
